# genai-langchain

./: .env  .gitignore  Hotel_Alexandra.txt  data.txt  gemeni_rag.py  langchain_agents.py  langchain_memory.py  langchain_messages.py  langchain_rag_agent.py  langchain_tools.py  langgraph_agent.py  langgraph_basic.py  langgraph_gemeni_agenticai_solar_rag.py  llm_gemeni.py  main.py  openai_rag.py  openai_rag_faiss.py  pyproject.toml  readme.md
